@@ -8,6 +8,8 @@ NOTE : this modified version is still under the Artistic License 2.0
 
 - LibEventHandler library now has its own manifest file and a global variable LibEventHandler for direct access.
 - Updated API version to 100029 (ESO 5.2.5 : Dragonhold)
+- LibDebugLogger has been newly added to OptionalDependsOn in the add-on manifest file.
+- Moved debug message output from UI chat to LibDebugLogger. From now on, we add-on authors and contributers will look at the debug log with the DebugLogViewer add-on.
 
 ------------------------------------------------------------------------------
 The following are changes to the standard version by original author Justinon.
